...
                        app:layout_constraintBottom_toBottomOf="@+id/title_tdee_gender">
                    <RadioButton
                            android:id="@+id/radio_male"
                            android:text="@string/male"
                            android:layout_width="wrap_content"
...
                        app:layout_constraintEnd_toEndOf="@+id/title_tdee_gender"/>
                <EditText
                        android:id="@+id/text_tdee_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        app:layout_constraintEnd_toEndOf="@+id/title_tdee_gender"/>
                <EditText
                        android:id="@+id/text_tdee_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        app:layout_constraintEnd_toEndOf="@+id/title_tdee_gender"/>
                <EditText
                        android:id="@+id/text_tdee_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_btn_calculate_tdee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                        android:textColor="@color/colorText"/>
                <TextView
                        android:id="@+id/text_result_bmr"
                        android:text="@{viewModel.displayBmr}"
                        android:layout_width="wrap_content"
...
                        android:textColor="@color/colorText"/>
                <TextView
                        android:id="@+id/text_result_sedentary"
                        android:text="@{viewModel.displaySed}"
                        android:layout_width="wrap_content"
...
                        android:textColor="@color/colorText"/>
                <TextView
                        android:id="@+id/text_result_light_exercise"
                        android:text="@{viewModel.displayL}"
                        android:layout_width="wrap_content"
...
                        android:textColor="@color/colorText"/>
                <TextView
                        android:id="@+id/text_result_moderate_exercise"
                        android:text="@{viewModel.displayM}"
                        android:layout_width="wrap_content"
...
                        android:textColor="@color/colorText"/>
                <TextView
                        android:id="@+id/text_result_heavy_exercise"
                        android:text="@{viewModel.displayH}"
                        android:layout_width="wrap_content"
...
                        android:layout_marginBottom="8dp"/>
                <TextView
                        android:id="@+id/text_result_athlete"
                        android:text="@{viewModel.displayAthlete}"
                        android:layout_width="wrap_content"
...
