...
        <import type="com.pinhsiang.fitracker.util.CurrentFragmentType"/>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.pinhsiang.fitracker.MainViewModel"/>

    </data>
    <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:openDrawer="start">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
...

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
                android:id="@+id/nav_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:menu="@menu/activity_main_drawer"
                tools:visibility="visible"
...
