<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/tools" android:id="@+id/tools">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_timer"
                        android:icon="@drawable/ic_timer_64dp"
                        android:title="@string/menu_timer"/>
                <item
                        android:id="@+id/nav_tdee"
                        android:icon="@drawable/ic_tdee_64dp"
                        android:title="@string/menu_tdee"/>
                <item
                        android:id="@+id/nav_1rm"
                        android:icon="@drawable/ic_rm_64dp"
                        android:title="@string/menu_1rm"/>
                <item
                        android:id="@+id/nav_recommended"
                        android:icon="@drawable/ic_video_64dp"
                        android:title="@string/menu_recommend"/>
            </group>
        </menu>
    </item>


                <item
                        android:id="@+id/nav_log_out"
                        android:icon="@drawable/ic_exit_black"
                        android:title="@string/log_out"/>



</menu>
